examples/test/testpolicy19883.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19883
  namespace: namespace35
spec:
  podSelector:
    matchLabels:
      key33: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value46
          key4: value9
          key13: value42
      podSelector:
        matchLabels:
          key42: value34
          key34: value40
          key16: value0
